--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Auth Boiler</title>
+  <title>Birthday Clowns</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -13,7 +13,7 @@
 <body>
     <nav class="sidenav-trigger teal darken-2">
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo">Logo</a>
+          <a href="/" class="brand-logo">BC</a>
           <a href="#" data-target="nav-links" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <% if(!user){ %>
